examples/invalid/08_struct_missing_field.lane
// invalid: struct literals must provide every field
module Examples.Invalid08
pub struct Point {
  x : Int
  y : Int
}

pub let point : Point = Point::{ x: 1 }
